Add show language menu

--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
+        <capability name="box content view" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -148,13 +149,13 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="53" horizontalPageScroll="10" verticalLineScroll="53" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XC9-Ql-v6K">
-                                <rect key="frame" x="0.0" y="223" width="228" height="259"/>
+                                <rect key="frame" x="0.0" y="172" width="228" height="200"/>
                                 <clipView key="contentView" drawsBackground="NO" id="Fuz-kX-goV">
-                                    <rect key="frame" x="1" y="1" width="226" height="257"/>
+                                    <rect key="frame" x="1" y="1" width="226" height="198"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="50" viewBased="YES" id="dCe-Pz-oWf">
-                                            <rect key="frame" x="0.0" y="0.0" width="226" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="226" height="198"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="3"/>
                                             <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -198,7 +199,7 @@
                                     <nil key="backgroundColor"/>
                                 </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="259" id="8YB-fI-7lM"/>
+                                    <constraint firstAttribute="height" constant="200" id="8YB-fI-7lM"/>
                                 </constraints>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="8i9-fO-niq">
                                     <rect key="frame" x="-100" y="-100" width="223" height="15"/>
@@ -210,13 +211,13 @@
                                 </scroller>
                             </scrollView>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="52" horizontalPageScroll="10" verticalLineScroll="52" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7m-qv-Med">
-                                <rect key="frame" x="0.0" y="0.0" width="228" height="223"/>
+                                <rect key="frame" x="0.0" y="0.0" width="228" height="172"/>
                                 <clipView key="contentView" drawsBackground="NO" id="Hhd-aZ-tZW">
-                                    <rect key="frame" x="1" y="1" width="226" height="221"/>
+                                    <rect key="frame" x="1" y="1" width="226" height="170"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="50" viewBased="YES" id="Pfb-rg-0je">
-                                            <rect key="frame" x="0.0" y="0.0" width="226" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="226" height="170"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -272,15 +273,80 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
+                            <box borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="uY8-V0-u9h">
+                                <rect key="frame" x="17" y="398" width="194" height="76"/>
+                                <view key="contentView" id="u4M-hd-3Bp">
+                                    <rect key="frame" x="1" y="1" width="192" height="74"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wi4-NZ-8we">
+                                            <rect key="frame" x="18" y="47" width="104" height="17"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="Wmt-gc-ofA"/>
+                                            </constraints>
+                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="English" id="qSY-Xn-nlQ">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kn4-jX-09b">
+                                            <rect key="frame" x="18" y="10" width="104" height="17"/>
+                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Russian" id="fYh-z0-QBx">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kgE-aI-tbl">
+                                            <rect key="frame" x="152" y="22" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="LG5-fy-ibw"/>
+                                                <constraint firstAttribute="width" constant="30" id="U7s-DL-EHF"/>
+                                            </constraints>
+                                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SwapButtonMainIcon" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="mKz-vr-8Re">
+                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                        </button>
+                                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="AdW-0J-AgL">
+                                            <rect key="frame" x="2" y="35" width="140" height="5"/>
+                                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <font key="titleFont" metaFont="system"/>
+                                        </box>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="kgE-aI-tbl" firstAttribute="leading" secondItem="AdW-0J-AgL" secondAttribute="trailing" constant="10" id="Bav-e1-c7J"/>
+                                        <constraint firstItem="kn4-jX-09b" firstAttribute="width" secondItem="Wi4-NZ-8we" secondAttribute="width" id="FRd-rw-Prl"/>
+                                        <constraint firstItem="AdW-0J-AgL" firstAttribute="leading" secondItem="u4M-hd-3Bp" secondAttribute="leading" constant="2" id="FzW-8n-ZE4"/>
+                                        <constraint firstAttribute="trailing" secondItem="kgE-aI-tbl" secondAttribute="trailing" constant="10" id="IEx-WI-KVV"/>
+                                        <constraint firstItem="Wi4-NZ-8we" firstAttribute="top" secondItem="u4M-hd-3Bp" secondAttribute="top" constant="10" id="YUs-uE-VBi"/>
+                                        <constraint firstItem="kn4-jX-09b" firstAttribute="leading" secondItem="u4M-hd-3Bp" secondAttribute="leading" constant="20" id="aLA-g3-kxr"/>
+                                        <constraint firstItem="AdW-0J-AgL" firstAttribute="centerY" secondItem="u4M-hd-3Bp" secondAttribute="centerY" id="acY-yu-fx5"/>
+                                        <constraint firstItem="kgE-aI-tbl" firstAttribute="centerY" secondItem="u4M-hd-3Bp" secondAttribute="centerY" id="fq6-UD-8Hq"/>
+                                        <constraint firstItem="Wi4-NZ-8we" firstAttribute="leading" secondItem="u4M-hd-3Bp" secondAttribute="leading" constant="20" id="gwR-AO-dPD"/>
+                                        <constraint firstAttribute="bottom" secondItem="kn4-jX-09b" secondAttribute="bottom" constant="10" id="md9-0d-xby"/>
+                                    </constraints>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="v74-tI-BbU"/>
+                                </constraints>
+                                <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                                <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </box>
                         </subviews>
                         <constraints>
                             <constraint firstItem="E7m-qv-Med" firstAttribute="leading" secondItem="YIL-Ql-cbp" secondAttribute="leading" id="64h-rv-j3s"/>
                             <constraint firstAttribute="bottom" secondItem="E7m-qv-Med" secondAttribute="bottom" id="8Bc-X9-R2z"/>
                             <constraint firstAttribute="trailing" secondItem="E7m-qv-Med" secondAttribute="trailing" id="E2P-8e-ARH"/>
+                            <constraint firstItem="uY8-V0-u9h" firstAttribute="top" secondItem="YIL-Ql-cbp" secondAttribute="top" constant="10" id="XWF-jr-Lz9"/>
                             <constraint firstItem="E7m-qv-Med" firstAttribute="top" secondItem="XC9-Ql-v6K" secondAttribute="bottom" id="Y3J-Tz-2X4"/>
+                            <constraint firstAttribute="trailing" secondItem="uY8-V0-u9h" secondAttribute="trailing" constant="20" id="hib-bT-LTS"/>
                             <constraint firstItem="XC9-Ql-v6K" firstAttribute="leading" secondItem="YIL-Ql-cbp" secondAttribute="leading" id="tAb-4Z-wIM"/>
-                            <constraint firstItem="XC9-Ql-v6K" firstAttribute="top" secondItem="YIL-Ql-cbp" secondAttribute="top" id="xdN-qS-Zz2"/>
+                            <constraint firstItem="uY8-V0-u9h" firstAttribute="leading" secondItem="YIL-Ql-cbp" secondAttribute="leading" constant="20" id="wY9-bt-5jE"/>
                             <constraint firstAttribute="trailing" secondItem="XC9-Ql-v6K" secondAttribute="trailing" id="xkG-TC-Wsa"/>
+                            <constraint firstItem="XC9-Ql-v6K" firstAttribute="top" secondItem="uY8-V0-u9h" secondAttribute="bottom" constant="30" id="zkv-wz-wLh"/>
                         </constraints>
                     </view>
                     <connections>
@@ -411,4 +477,7 @@
             <point key="canvasLocation" x="483.5" y="1565.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SwapButtonMainIcon" width="256" height="256"/>
+    </resources>
 </document>
